--- a/src/Applicants.css
+++ b/src/Applicants.css
@@ -16,7 +16,6 @@
     font-size: 5.875rem !important;
     text-align: center;
     color: #373a40;
-            /*darkcyan;*/
     margin-top: -12px !important;
     grid-column-start: 7;
 }
@@ -82,6 +81,10 @@ h1, .title{
     color: white !important;
 }
 
+h1 {
+    padding-top: 15px;
+}
+
 .Icon {
     grid-column-start: 5;
     grid-column-end: 7;
@@ -94,15 +97,11 @@ h1, .title{
 }
 
 .applicant {
-    background-color: #eeeeee;
+    background-color: white !important;
     outline-style: auto;
-    outline-color: #eeeeee;
+    outline-color: white !important;
 }
 
 body {
     background-color: #9ba4b4;
-}
-
-.MuiPaper-root {
-    background-color: #14274e;
 }
