added event and job posting forms. Job posting application functionality.

--- a/src/JobPostingForm.css
+++ b/src/JobPostingForm.css
@@ -31,9 +31,13 @@
 }
 
 #Submit {
-    background-color: cornflowerblue !important;
+    background-color: #3f51b5 !important;
 }
 
 #SubmitDiv {
     text-align: right;
+}
+
+body {
+    background-color: #9ba4b4;
 }
