--- a/src/Applicants.css
+++ b/src/Applicants.css
@@ -62,11 +62,11 @@
     margin-right: 0;
 }
 
-.MuiContainer-root {
-    background-color: #14274e;
-    /*outline-style: auto;*/
-    /*outline-color: #14274e;*/
-}
+/*.MuiContainer-root {*/
+/*    background-color: #14274e;*/
+/*    !*outline-style: auto;*!*/
+/*    !*outline-color: #14274e;*!*/
+/*}*/
 
 .MuiToolbar-root {
     background-color: #394867;
