--- a/src/CompanyPostings.css
+++ b/src/CompanyPostings.css
@@ -40,3 +40,13 @@ p, .MuiListItemText-primary {
 .Location {
     width: 20%;
 }
+
+.MuiButton-label {
+    color: white;
+}
+
+.MuiButton-containedPrimary {
+     color: #fff;
+     background-color: #3f51b5;
+     margin-left: 12px;
+ }
