Added posting information in ranked applicants page

--- a/src/Applicants.css
+++ b/src/Applicants.css
@@ -3,57 +3,57 @@
     margin-bottom: 30px;
 }
 
-.title {
-    font-size: 1.5rem !important;
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-    font-weight: 400;
-    line-height: 1.334;
-    letter-spacing: 0em;
-    color: black !important;
-}
+/*.title {*/
+/*    font-size: 1.5rem !important;*/
+/*    font-family: "Roboto", "Helvetica", "Arial", sans-serif;*/
+/*    font-weight: 400;*/
+/*    line-height: 1.334;*/
+/*    letter-spacing: 0em;*/
+/*    color: black !important;*/
+/*}*/
 
-.Rank {
-    font-size: 5.875rem !important;
-    text-align: center;
-    color: #373a40;
-    margin-top: -12px !important;
-    grid-column-start: 7;
-}
-.RankTitle{
-    padding-left: 30%;
-    grid-column-start: 7;
-    grid-row-start: 2;
-}
+/*.Rank {*/
+/*    font-size: 5.875rem !important;*/
+/*    text-align: center;*/
+/*    color: #373a40;*/
+/*    margin-top: -12px !important;*/
+/*    grid-column-start: 7;*/
+/*}*/
+/*.RankTitle{*/
+/*    padding-left: 30%;*/
+/*    grid-column-start: 7;*/
+/*    grid-row-start: 2;*/
+/*}*/
 
-.name {
-    grid-row-start: 2;
-}
+/*.name {*/
+/*    grid-row-start: 2;*/
+/*}*/
 
-.university {
-    grid-row-start: 2;
-    grid-column-start: 2;
-}
+/*.university {*/
+/*    grid-row-start: 2;*/
+/*    grid-column-start: 2;*/
+/*}*/
 
-.gpa {
-    grid-row-start: 2;
-    grid-column-start: 3;
-}
+/*.gpa {*/
+/*    grid-row-start: 2;*/
+/*    grid-column-start: 3;*/
+/*}*/
 
-.container {
-    display: inline-grid;
-    width: 100%;
-    grid-template-columns: 30% 30% 5% 4% 11% 8% 10%;
-    grid-template-rows: 10% 15% 15%;
-}
+/*.container {*/
+/*    display: inline-grid;*/
+/*    width: 100%;*/
+/*    grid-template-columns: 30% 30% 5% 4% 11% 8% 10%;*/
+/*    grid-template-rows: 10% 15% 15%;*/
+/*}*/
 
-.titleContainer {
-    display: inline-grid;
-    width: 84%;
-    grid-template-columns: 34% 34% 0% 11% 8% 16% 0%;
-    grid-template-rows: 10% 15% 15%;
-    height: 15px;
-    margin: 20px;
-}
+/*.titleContainer {*/
+/*    display: inline-grid;*/
+/*    width: 84%;*/
+/*    grid-template-columns: 34% 34% 0% 11% 8% 16% 0%;*/
+/*    grid-template-rows: 10% 15% 15%;*/
+/*    height: 15px;*/
+/*    margin: 20px;*/
+/*}*/
 
 .MuiCard-root {
     overflow: hidden;
@@ -72,10 +72,10 @@
     background-color: #394867;
 }
 
-.icon {
-    height: 150px;
-    width: 150px;
-}
+/*.icon {*/
+/*    height: 150px;*/
+/*    width: 150px;*/
+/*}*/
 
 h1, .title{
     color: black !important;
@@ -85,22 +85,22 @@ h1 {
     padding-top: 15px;
 }
 
-.Icon {
-    grid-column-start: 5;
-    grid-column-end: 7;
-    grid-row-start: 2;
-}
+/*.Icon {*/
+/*    grid-column-start: 5;*/
+/*    grid-column-end: 7;*/
+/*    grid-row-start: 2;*/
+/*}*/
 
 
-.MuiCardContent-root:last-child {
-    height: 100px;
-}
+/*.MuiCardContent-root:last-child {*/
+/*    height: 100px;*/
+/*}*/
 
-.applicant {
-    background-color: white !important;
-    outline-style: auto;
-    outline-color: white !important;
-}
+/*.applicant {*/
+/*    background-color: white !important;*/
+/*    outline-style: auto;*/
+/*    outline-color: white !important;*/
+/*}*/
 
 body {
     background-color: #9ba4b4;
