--- a/src/EventForm.css
+++ b/src/EventForm.css
@@ -1,45 +1,45 @@
-.MuiContainer-maxWidthMd {
-    max-width: 960px;
-    min-height: 960px;
-    background-color: aliceblue;
-}
-
-
-#PositionName, #Location{
-    width: 412px;
-}
-
-
-/*#Datetime {*/
-/*    padding-left: 50px;*/
+/*.MuiContainer-maxWidthMd {*/
+/*    max-width: 960px;*/
+/*    min-height: 960px;*/
+/*    background-color: aliceblue;*/
 /*}*/
 
-.MuiFormControl-root {
-    min-width: 100%;
-}
 
-.MuiOutlinedInput-root {
-    margin-top: 12px;
-    border-color: aliceblue;
-}
+/*#PositionName, #Location{*/
+/*    width: 412px;*/
+/*}*/
 
-.MuiFormControl-root {
-    margin: 8px !important;
-}
 
-.makeStyles-formControl-14 {
-    width: 75%;
-    margin-top: 15px;
-}
+/*!*#Datetime {*!*/
+/*!*    padding-left: 50px;*!*/
+/*!*}*!*/
 
-.h3 {
-    margin-top: 55px !important;
-}
+/*.MuiFormControl-root {*/
+/*    min-width: 100%;*/
+/*}*/
 
-#Submit {
-    background-color: #3f51b5 !important;
-}
+/*.MuiOutlinedInput-root {*/
+/*    margin-top: 12px;*/
+/*    border-color: aliceblue;*/
+/*}*/
 
-#SubmitDiv {
-    text-align: right;
-}
+/*.MuiFormControl-root {*/
+/*    margin: 8px !important;*/
+/*}*/
+
+/*.makeStyles-formControl-14 {*/
+/*    width: 75%;*/
+/*    margin-top: 15px;*/
+/*}*/
+
+/*.h3 {*/
+/*    margin-top: 55px !important;*/
+/*}*/
+
+/*#Submit {*/
+/*    background-color: #3f51b5 !important;*/
+/*}*/
+
+/*#SubmitDiv {*/
+/*    text-align: right;*/
+/*}*/
